--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #f16059;
+  background-color: #fffaef;
 }
 .page {
   width: 80%;
   max-width: 960px;
   margin: 50px auto;
   text-align: center;
-  background-color: #f16059;
+  background-color: #fffaef;
   border-radius: 5px;
 }
 body {
@@ -67,6 +67,7 @@ blockquote:after { content: '"'; }
 }
 
 footer p {
+  margin-top: 100px;
   text-transform: uppercase;
   font-size: 12px;
 }
